# euclid-engine

./: .gitignore  CMakeLists.txt  Chess Engine Roadmap.md  LICENSE  README.md  ROADMAP_STATUS.rtf  const123.txt  const50.txt
.gemini/: config.yaml  settings.json
.github/workflows/: ci.yaml
build_asan/: CTestTestfile.cmake  Makefile  bishop_smoke  castle_smoke  cmake_install.cmake  do_undo_smoke  draw_rules_smoke  encode_smoke  euclid_cli  eval_sanity_smoke  eval_smoke  fen_test  incheck_smoke  king_smoke  nn_eval_integration_smoke  nn_make_const_smoke  nn_smoke  nullmove_state_smoke  pawn_smoke  perft_refs  perft_smoke  pin_smoke  queen_smoke  rook_smoke  search_limits_smoke  search_nn_pov_smoke  search_smoke  selfplay_smoke  smoketest  uci_evalmodel_smoke  uci_smoke
build_debug/: CTestTestfile.cmake  Makefile  bishop_smoke  castle_smoke  cmake_install.cmake  dataset_smoke  do_undo_smoke  draw_rules_smoke  encode_smoke  euclid_cli  eval_sanity_smoke  eval_smoke  fen_test  incheck_smoke  king_smoke  nn_eval_integration_smoke  nn_make_const_smoke  nn_smoke  nullmove_state_smoke  pawn_smoke  perft_refs  perft_smoke  pin_smoke  queen_smoke  rook_smoke  search_limits_smoke  search_nn_pov_smoke  search_smoke  selfplay_smoke  smoketest  uci_evalmodel_smoke  uci_smoke
build_debug/Testing/Temporary/: CTestCostData.txt
cmake/: FindONNXRuntime.cmake
include/euclid/: attack.hpp  attacks_tbl.hpp  board.hpp  dataset.hpp  draw.hpp  encode.hpp  eval.hpp  fen.hpp  game.hpp  move.hpp  move_do.hpp  movegen.hpp  movelist.hpp  nn.hpp  nn_eval.hpp  ort_eval.hpp  perft.hpp  search.hpp  selfplay.hpp  tt.hpp  types.hpp  uci.hpp  zobrist.hpp
src/: attack.cpp  attacks_tbl.cpp  board.cpp  dataset.cpp  encode.cpp  eval.cpp  fen.cpp  game.cpp  main.cpp  move_do.cpp  movegen.cpp  nn.cpp  nn_eval.cpp  ort_eval.cpp  perft.cpp  search.cpp  selfplay.cpp  tt.cpp  uci.cpp  uci_main.cpp  zobrist.cpp
tests/: bishop_smoke.cpp  castle_smoke.cpp  dataset_smoke.cpp  do_undo_smoke.cpp  draw_rules_smoke.cpp  encode_smoke.cpp  eval_cache_smoke.cpp  eval_sanity_smoke.cpp  eval_smoke.cpp  fen.cpp  incheck_smoke.cpp  king_smoke.cpp  nn_eval_integration_smoke.cpp  nn_eval_smoke.cpp  nn_make_const_smoke.cpp  nn_smoke.cpp  nullmove_state_smoke.cpp  ort_eval_smoke.cpp  pawn_smoke.cpp  perft_refs.cpp  perft_smoke.cpp  pin_smoke.cpp  queen_smoke.cpp  rook_smoke.cpp  search_limits_smoke.cpp  search_nn_pov_smoke.cpp  search_smoke.cpp  selfplay_smoke.cpp  smoke.cpp  uci_evalmodel_smoke.cpp  uci_smoke.cpp
